fix: swaggerfox -> swaggerdoc 변경